Wird diese Option deaktivert, wird der normale WYSIWYG Editor Style geladen.
- Aus sicherheits- und benutzerfreundlichen Gründen wird nun standardmässig jeder Text der in den
WYSIWYG Editor kopiert wird, als Plaintext eingefügt. (FCKConfig.ForcePasteAsPlainText = true;)

Modul: Shop
- Bilder können von einem Produkt wieder entfernt werden.

****************************************
* Behobene Fehler **********************
****************************************
Allgemein
- Die im Benutzerprofil definierte bevorzugte Frontend-Sprache wird nach der
  Authentifizierung im Frontend nur dann geladen, sofern der Benutzer im
  Vorfeld nicht bereits die Frontend Sprache manuell ausgewählt hat.
- Geschwindigkeitsoptimierung der Benutzerverwaltung.
- Die Verwendung des Apache Moduls mod_rewrite wird nur aktiviert, sofern die
  Option 'Virtuelle Sprachverzeichnisse verwenden' aktiviert wurde.
- Erweiterte Berechtigungen beim News Manager und den Modulen Kalender,
  Inserate Mark und Verzeichnis.

Block System
- Das Interface zur Auswahl der Frontend Seiten funktioniert korrekt.

Benutzerverwaltung
- Geburtstage zwischen dem 10. Februar 1653 und dem 16. November 5138 können
  erfasst werden.

News Manager
- Das Bearbeiten einer Nachricht ohne Administrator Rechte funktioniert.

Modul: Adressverzeichnis
- Die Suche funktioniert in jedem Bereich.

Modul: Digital Asset Management
- Die Benutzerdefinierte Sortierung funktioniert.
- Kategorien können keinen Unterkategorien zugeordnet werden.

Modul: Dokumenten System
- Kompatibel mit der Alias Verwaltung.

Modul: Kleinanzeigemarkt
- Die Suche nach Anzeigen im Backend funktioniert.

Modul: Newsletter
- Die Anmeldung und Bearbeitung des Profils funktioniert korrekt.

Modul: Shop
- E-Mail Vorlagen vom Typ Systemvorlage sind nicht Löschbar.
- Bei der Bestellung eines Produktes vom Typ "Mitgliedschaft" wird das
  Benutzerkonto mit der entsprechend definierten Gültigkeitsdauer erstellt.